# traffic-signal-env

./: .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: test_local.py
server/: app.py  graders.py  requirements.txt  simulation.py  traffic_environment.py
src/core/: __init__.py
src/envs/traffic_signal_env/: __init__.py  client.py  environment.py  graders.py  models.py
src/envs/traffic_signal_env/server/: app.py
