[project]
name = "traffic-signal-env"
version = "0.1.0"
description = "Traffic Signal Control OpenEnv Project"
authors = [
    { name = "Radhika Mishra" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "numpy",
    "pandas"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"